added save to pdf page

--- a/src/full-report.html
+++ b/src/full-report.html
@@ -6,7 +6,7 @@
   <title>Заголовок страницы</title>
 </head>
 <body>
-<div class="wrapper">
+<div class="wrapper save-pdf">
   <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
   <div class="full-report">
     <include src="./partials/form-result.html"></include>
@@ -19,6 +19,7 @@
   <include src="./partials/summary.html"></include>
 </div>
 <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+
 <script src="./index.js"></script>
 </body>
 </html>
